[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Kenney Thick.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/player_avatar.png" type="Texture" id=3]
[ext_resource path="res://assets/OpenSans-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 4 )

[node name="HUD" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 20.0
margin_right = 974.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 924.0
margin_bottom = 537.0
size_flags_vertical = 3

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 584.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 5
text = "0 - 0"

[node name="LifeCounter" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 588.0
margin_right = 924.0
margin_bottom = 64.0
size_flags_vertical = 0

[node name="L1" type="TextureRect" parent="VBoxContainer/HBoxContainer/LifeCounter"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="L2" type="TextureRect" parent="VBoxContainer/HBoxContainer/LifeCounter"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="L3" type="TextureRect" parent="VBoxContainer/HBoxContainer/LifeCounter"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="L4" type="TextureRect" parent="VBoxContainer/HBoxContainer/LifeCounter"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="L5" type="TextureRect" parent="VBoxContainer/HBoxContainer/LifeCounter"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true

[node name="AutorLabel" type="Label" parent="VBoxContainer"]
margin_top = 541.0
margin_right = 924.0
margin_bottom = 580.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Rodriguez Javier"
align = 1
